# libxdg-basedir

./: .gitignore  .travis.yml  Doxyfile  Makefile.am  README.md  autogen.sh  configure.ac  doxygen.cfg  gendock.sh  xdg-source.dox  xdg.dox
include/: Makefile.am  basedir.h  basedir_fs.h
m4/: attributes.m4
pkgconfig/: .gitignore  libxdg-basedir.pc.in
src/: .gitignore  Makefile.am  basedir.c
tests/: .gitignore  Makefile.am  query-harness.sh  querycd.1  querycd.2  querycd.3  querycd.4  querycd.5  querycf.1  querycf.2  querycs.1  querycs.2  querycs.3  querycs.4  querycs.5  querydd.1  querydd.2  querydd.3  querydd.4  querydd.5  querydf.1  querydf.2  querydh.1  querydh.2  querydh.3  queryds.1  queryds.2  queryds.3  queryds.4  queryds.5  queryds.6  testdump.c  testfind.c  testquery.c
